# sdb-rs

./: Cargo.toml  README.md  cspell.jsonc
.devcontainer/: devcontainer.json
cli/: Cargo.toml
cli/src/: error.rs  logger.rs  main.rs
cli/src/args/: app.rs  dbg.rs  mod.rs
sdb/: Cargo.toml
sdb/src/: error.rs  lib.rs
sdb/src/process/: mod.rs
