[workspace.package]
version = "0.1.0"
description = "Debugger"
categories = ["compilers", "parsing"]
keywords = ["debugger"]
authors = ["SARDONYX-sard"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/SARDONYX-sard/sdb-rs"
readme = "README.md"
edition = "2021"
rust-version = "1.60"

[workspace]
members = ["cli", "sdb"]
default-members = ["cli"]
resolver = "2"

[workspace.dependencies]
snafu = "0.8.5"               # To define errors
tracing = "0.1.40"            # Log
tracing-subscriber = "0.3.18" # Init Logger
nix = "0.29.0"

# workspace members
sdb = { path = "./sdb" }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"

derive_partial_eq_without_eq = "allow"
future_not_send = "allow"
multiple_crate_versions = "allow"
pub_with_shorthand = "allow"
redundant_pub_crate = "allow"
