[package]
name = "sdb_cli"
version = "0.1.0"
edition = "2021"
description = "cli debugger"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "sdb"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }                         # CLI command parser
rustyline = "14.0.0"                                                         # REPL reader
snafu = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
nix = { workspace = true, features = ["fs", "signal", "ptrace", "process"] }

# workspace members
sdb = { workspace = true }

[lints]
workspace = true

[features]
default = []
# Enable file history
file-history = []
# Enable log
tracing = ["dep:tracing", "dep:tracing-subscriber"]
# Enable CLI help display with color
color = []
