[package]
name = "sdb"
version = "0.1.0"
edition = "2021"
description = "debugger library"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
snafu = { workspace = true }
tracing = { workspace = true, optional = true }
nix = { workspace = true, features = ["signal", "ptrace", "process"] }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[features]
# Enable log
tracing = ["dep:tracing"]
